--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "kill": "kill -9 $(lsof -ti:3000)"
@@ -30,7 +30,7 @@
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.1",
     "lucide-react": "^0.291.0",
-    "next": "14.0.1",
+    "next": "^14.0.3",
     "openai": "^4.15.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
@@ -39,6 +39,7 @@
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.0",
     "replicate": "^0.21.1",
+    "sharp": "^0.32.6",
     "stripe": "^14.5.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "3.3.5",
